src/objects/Snapshot__c.object
<CustomObject>
    <description>This object will be used to record snapshots of changes on other records when needed.</description>
    <fields>
        <fullName>ASI_Approved_Date__c</fullName>
        <description>ASI Approved Date</description>
        <label>ASI Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_Memo_Received_Date__c</fullName>
        <description>ASI Memo Received Date</description>
        <label>ASI Memo Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_Notification_Sent_Date__c</fullName>
        <description>ASI Notification Sent Date</description>
        <label>ASI Notification Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_New_Date__c</fullName>
        <label>Agreement New Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_OCC_Approval_Date__c</fullName>
        <label>Agreement OCC Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_OCC_Signed_Date__c</fullName>
        <label>Agreement OCC Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_OU_Approved_Date__c</fullName>
        <label>Agreement OU Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_OU_Signed_Date__c</fullName>
        <label>Agreement OU Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_PI_Approved_Date__c</fullName>
        <label>Agreement PI Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_Partner_Signed_Date__c</fullName>
        <label>Agreement Partner Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_Routed_OCC_Approval_Date__c</fullName>
        <label>Agreement Routed OCC Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_Status_Active_Date__c</fullName>
        <description>Agreement Status Active Date</description>
        <label>Agreement Status Active Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_Status_Canceled_Date__c</fullName>
        <description>Agreement Status Canceled Date</description>
        <label>Agreement Status Canceled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_Status_Expired_Date__c</fullName>
        <description>Agreement Status Expired Date</description>
        <label>Agreement Status Expired Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_Status_In_Process_Date__c</fullName>
        <description>Agreement Status Agreement In Process Date</description>
        <label>Agreement Status In Process Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_Status_Pending_Amendment_Date__c</fullName>
        <description>Agreement Status Pending Amendment Date</description>
        <label>Agreement Status Pending Amendment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_Status_Terminated_Date__c</fullName>
        <description>Agreement Status Terminated Date</description>
        <label>Agreement Status Terminated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_TPO_Signed_Date__c</fullName>
        <label>Agreement TPO Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Snapshots</relationshipLabel>
        <relationshipName>Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSI_Approved_Date__c</fullName>
        <description>HSI Approved Date</description>
        <label>HSI Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSI_Memo_Received_Date__c</fullName>
        <description>HSI Memo Received Date</description>
        <label>HSI Memo Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSI_Notification_Sent_Date__c</fullName>
        <description>HSI Notification Sent Date</description>
        <label>HSI Notification Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IAAO_Approved_Date__c</fullName>
        <description>IAAO Approved Date</description>
        <label>IAAO Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IAAO_Memo_Received_Date__c</fullName>
        <description>IAAO Memo Received Date</description>
        <label>IAAO Memo Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IAAO_Notification_Sent_Date__c</fullName>
        <description>IAAO Notification Sent Date</description>
        <label>IAAO Notification Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_SP_Case_Memo__c</fullName>
        <formula>IF( 
OR(
ISBLANK(IAAO_Memo_Received_Date__c), 
ISBLANK(HSI_Memo_Received_Date__c), 
ISBLANK(ASI_Memo_Received_Date__c), 
ISBLANK(Patent_Officer_Memo_Received_Date__c), 
ISBLANK(USTR_Memo_Received_Date__c) 
), 
NULL, 
Today()- 
MAX( 
Today() - BLANKVALUE(DATEVALUE(IAAO_Notification_Sent_Date__c), DATE(2999, 01, 01)), 
Today() - BLANKVALUE(DATEVALUE(HSI_Notification_Sent_Date__c), DATE(2999, 01, 01)), 
Today() - BLANKVALUE(DATEVALUE(ASI_Notification_Sent_Date__c), DATE(2999, 01, 01)), 
Today() - BLANKVALUE(DATEVALUE(Patent_Officer_Notification_Sent_Date__c), DATE(2999, 01, 01)),
Today() - BLANKVALUE(DATEVALUE(USTR_Notification_Sent_Date__c), DATE(2999, 01, 01)) 
) 
)</formula>
        <label>Latest SP Case Memo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Signature_Date__c</fullName>
        <formula>IF(
    AND(
        ISBLANK(Agreement_Partner_Signed_Date__c),
        ISBLANK(Agreement_OCC_Signed_Date__c),
        ISBLANK(Agreement_OU_Signed_Date__c),
        ISBLANK(Agreement_TPO_Signed_Date__c)
    ),
    NULL,
   Today()-
    MAX(
       Today() - BLANKVALUE(DATEVALUE(Agreement_Partner_Signed_Date__c), DATE(2999, 01, 01)),
       Today() - BLANKVALUE(DATEVALUE(Agreement_OCC_Signed_Date__c), DATE(2999, 01, 01)),
       Today() - BLANKVALUE(DATEVALUE(Agreement_OU_Signed_Date__c), DATE(2999, 01, 01)),
       Today() - BLANKVALUE(DATEVALUE(Agreement_TPO_Signed_Date__c), DATE(2999, 01, 01))
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_to_OCC_Approval__c</fullName>
        <formula>Agreement_OCC_Approval_Date__c -  Agreement_New_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New to OCC Approval (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_to_OCC_Signed__c</fullName>
        <formula>Agreement_OCC_Signed_Date__c -  Agreement_New_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New to OCC Signed (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_to_OU_Approved__c</fullName>
        <formula>Agreement_OU_Approved_Date__c -  Agreement_New_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New to OU Approved (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_to_OU_Signed__c</fullName>
        <formula>Agreement_OU_Signed_Date__c -  Agreement_New_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New to OU Signed (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_to_PI_Approved__c</fullName>
        <formula>Agreement_PI_Approved_Date__c -  Agreement_New_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New to PI Approved (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_to_Partner_Signed__c</fullName>
        <formula>Agreement_Partner_Signed_Date__c -  Agreement_New_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New to Partner Signed (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_to_Routed_for_OCC_Approval_Days__c</fullName>
        <formula>Agreement_Routed_OCC_Approval_Date__c -  Agreement_New_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New to Routed for OCC Approval (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_to_TPO_Signed__c</fullName>
        <formula>Agreement_TPO_Signed_Date__c -  Agreement_New_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New to TPO Signed (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patent_Officer_Approved_Date__c</fullName>
        <description>Patent Officer Approved Date</description>
        <label>Patent Officer Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Patent_Officer_Memo_Received_Date__c</fullName>
        <description>Patent Officer Memo Received Date</description>
        <label>Patent Officer Memo Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Patent_Officer_Notification_Sent_Date__c</fullName>
        <description>Patent Officer Notification Sent Date</description>
        <label>Patent Officer Notification Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <description>The ID of the record in the original object.</description>
        <label>Reference ID</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Object__c</fullName>
        <label>Reference Object</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Case_Aging_Days__c</fullName>
        <formula>today()-Latest_SP_Case_Memo__c</formula>
        <label>SP Case Aging (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature_Aging_Days__c</fullName>
        <formula>today()-Latest_Signature_Date__c</formula>
        <label>Signature Aging (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USTR_Memo_Received_Date__c</fullName>
        <description>USTR Memo Received Date</description>
        <label>USTR Memo Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>USTR_Notification_Sent_Date__c</fullName>
        <description>USTR Notification Sent Date</description>
        <label>USTR Notification Sent Date</label>
        <type>DateTime</type>
    </fields>
    <label>Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SN-{0000000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>